<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    >
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_marginStart="30dp"
       android:layout_marginEnd="30dp"
       >
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/text_remind_tv1"
           android:textSize="12sp"
           android:textColor="@color/red"
           />
       <!--<TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/text_remind_tv2"
           android:textColor="@color/defaultColor"
           />-->
   </LinearLayout>
    <TextView  android:layout_marginTop="10dp" android:layout_marginStart="30dp" android:layout_marginEnd="30dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_remind_tv3" android:textColor="@color/defaultColor" android:textSize="12sp"/>
    <TextView  android:layout_marginTop="10dp" android:layout_marginStart="30dp" android:layout_marginEnd="30dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_remind_tv4" android:textColor="@color/defaultColor" android:textSize="12sp"/>
    <TextView  android:layout_marginTop="10dp" android:layout_marginStart="30dp" android:layout_marginEnd="30dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_remind_tv5" android:textColor="@color/defaultColor" android:textSize="12sp"/>

</LinearLayout>
