<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/common_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_phone" />

        <EditText
            style="?android:attr/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/text_forgetpwd_phone" />
        <Button
            android:id="@+id/btn_getcode"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/btn_pink_shape"
            android:text="@string/text_register_getcode"
            android:textColor="@color/white"
            />

    </LinearLayout>
    <include layout="@layout/view_splitline_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_auth" />

        <EditText
            style="?android:attr/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/text_forgetpwd_checkcode" />
    </LinearLayout>
    <include layout="@layout/view_splitline_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_pwd" />

        <EditText
            android:id="@+id/et_forgetpwd_pwd"
            style="?android:attr/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/text_forgetpwd_pwd" />
    </LinearLayout>
    <include layout="@layout/view_splitline_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_pwd"/>

        <EditText
            style="?android:attr/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/text_register_confirmpwd"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_forgetpwd"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/btn_pink_shape"
        android:text="@string/text_forgetpwd_commit"
        android:textColor="@color/white"
        android:textSize="16sp"
        />


</LinearLayout>
