<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/common_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_phone" />

        <EditText
            android:id="@+id/et_login_phone"
            style="?android:attr/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:maxLength="15"
            android:inputType="phone"
            android:background="@null"
            android:hint="@string/text_register_phone" />
    </LinearLayout>
    <View style="@style/line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_pwd"/>

        <EditText
            android:id="@+id/et_login_passwd"
            style="?android:attr/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:maxLength="15"
            android:inputType="textPassword"
            android:background="@null"
            android:hint="@string/text_register_passwd" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/btn_ad_shape"
        android:text="@string/text_login"
        android:textColor="@color/white"
        android:textSize="16sp"
        />
    <TextView android:textSize="12sp" android:textColor="#fffe3465" android:layout_gravity="end" android:id="@+id/tv_forgot_pwd" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_forgot_pwd" android:paddingStart="6dp" android:paddingEnd="6dp" android:layout_marginEnd="9dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp">
        <View android:layout_gravity="center_vertical" android:background="@color/line_color" android:layout_width="0.0dip" android:layout_height="0.5dp" android:layout_weight="1.0" />
        <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@color/colorText80" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_login_custom" android:layout_marginStart="10dp" android:layout_marginEnd="10dp" />
        <View android:layout_gravity="center_vertical" android:background="@color/line_color" android:layout_width="0.0dip" android:layout_height="0.5dp" android:layout_weight="1.0" />
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_login_contract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:src="@drawable/icon_contact_custom"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>
