<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_phone" />

            <TextView
                android:id="@+id/et_modifypwd_phonenum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_modifypwd_getcode"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/btn_pink_shape"
                android:text="@string/text_register_getcode"
                android:textColor="@color/white" />

        </LinearLayout>

        <View style="@style/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_auth" />

            <EditText
                android:id="@+id/et_modifypwd_msgcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp10"
                android:hint="@string/text_modifypwd_hint1"/>
        </LinearLayout>
        <View style="@style/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_pwd" />

            <EditText
                android:id="@+id/et_modifypwd_prepasswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp10"
                android:hint="@string/text_modifypwd_hint2"/>
        </LinearLayout>

        <View style="@style/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_pwd" />

            <EditText
                android:id="@+id/et_modifypwd_passwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_weight="1"
                android:textSize="@dimen/sp_14"
                android:background="@null"
                android:hint="@string/text_modifypwd_hint3" />
        </LinearLayout>
        <View style="@style/line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_pwd" />

            <EditText
                android:id="@+id/et_modifypwd_passwd_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp10"
                android:hint="@string/text_modifypwd_hint4"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/btn_pink_shape"
        android:text="@string/text_modifypwd_commit"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

</LinearLayout>